--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -71,6 +71,9 @@
           <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Connect with Google+
           </a>
+          <a class="" href="" ng-click="loginKakao()">
+            <img src="../../assets/images/kakaologin/en/kakao_account_login_btn_medium_narrow_ov.png" style="width: 203px; height: 40px;">
+          </a>
         </div>
       </form>
     </div>
