--- a/client/index.html
+++ b/client/index.html
@@ -84,6 +84,9 @@
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+          <script type="text/javascript">
+             Kakao.init('db831e72d4093199ddd7954e27a2f91b');
+          </script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
